--- a/p2.css
+++ b/p2.css
@@ -4,7 +4,7 @@ margin-bottom: 10px;
 padding: 0;
 }
 
-#body, #footer {
+#body {
 margin-left: auto;
 margin-right: auto;
 width: 980px;
